--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 buildscript {
     ext {
         // Default dependencies
-        kotlinVersion = "1.8.20"
-        ktxVersion = "1.10.1"
+        kotlinVersion = "1.9.22"
+        ktxVersion = "1.12.0"
         appCompatVersion = "1.6.1"
-        materialVersion = "1.9.0"
+        materialVersion = "1.11.0"
         constraintLayoutVersion = "2.1.4"
         junitVersion = "4.13.2"
         testExtJunitVersion = "1.1.5"
@@ -13,21 +13,22 @@ buildscript {
         // Added dependencies
         retrofitVersion = "2.9.0"
         okHttpVersion = "4.10.0"
-        daggerVersion = "2.45"
+        daggerVersion = "2.50"
         coroutinesVersion = "1.6.1"
         serializationVersion = "1.5.0"
         serializationConverterVersion = "0.8.0"
-        pagingVersion = "3.1.1"
+        pagingVersion = "3.2.1"
         viewBindingDelegateVersion = "1.5.8"
-        fragmentKtxVersion = "1.5.7"
+        fragmentKtxVersion = "1.6.2"
         timberVersion = "5.0.1"
-        roomVersion = "2.5.1"
+        roomVersion = "2.6.1"
         glideVersion = "4.15.1"
-        navigationVersion = "2.5.3"
+        navigationVersion = "2.7.6"
         fastScrollVersion = "1.2.0"
         dataStoreVersion = "1.0.0"
         protobufGradlePluginVersion = "0.9.3"
         protobufVersion = "3.0.0"
+        elmslieVersion = "3.0.0-alpha10"
     }
 
     dependencies {
