--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ buildscript {
         // Added dependencies
         retrofitVersion = "2.9.0"
         okHttpVersion = "4.10.0"
-        daggerVersion = "2.50"
+        yataganVersion = "1.4.1"
         coroutinesVersion = "1.6.1"
         serializationVersion = "1.5.0"
         serializationConverterVersion = "0.8.0"
