Upgrade AGP & migrate to ksp

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,12 @@
-import org.jetbrains.kotlin.gradle.tasks.KotlinCompilationTask
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
 plugins {
     id "com.android.application"
     id "org.jetbrains.kotlin.android"
-    id "org.jetbrains.kotlin.kapt"
     id "org.jetbrains.kotlin.plugin.serialization" version "$kotlinVersion"
     id "androidx.navigation.safeargs.kotlin"
     id "kotlin-parcelize"
+    id "com.google.devtools.ksp"
 }
 
 android {
@@ -39,10 +38,7 @@ android {
     }
     buildFeatures {
         viewBinding true
-    }
-    kapt {
-        generateStubs true
-        correctErrorTypes true
+        buildConfig true
     }
 }
 
@@ -61,9 +57,8 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp:$okHttpVersion"
 
     // Yatagan
-    // api("com.yandex.yatagan:api-dynamic:$yataganVersion")
-    api("com.yandex.yatagan:api-compiled:$yataganVersion")
-    kapt("com.yandex.yatagan:processor-jap:$yataganVersion")
+    api "com.yandex.yatagan:api-compiled:$yataganVersion"
+    ksp "com.yandex.yatagan:processor-ksp:$yataganVersion"
 
     // Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
@@ -73,7 +68,7 @@ dependencies {
     implementation "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:$serializationConverterVersion"
 
     // Paging
-    implementation "androidx.paging:paging-runtime:$pagingVersion"
+    implementation "androidx.paging:paging-runtime-ktx:$pagingVersion"
 
     // ViewBinding Property delegate
     implementation "com.github.kirich1409:viewbindingpropertydelegate-full:$viewBindingDelegateVersion"
@@ -86,7 +81,7 @@ dependencies {
 
     // Room
     implementation "androidx.room:room-runtime:$roomVersion"
-    kapt "androidx.room:room-compiler:$roomVersion"
+    ksp "androidx.room:room-compiler:$roomVersion"
     implementation "androidx.room:room-paging:$roomVersion"
     implementation "androidx.room:room-ktx:$roomVersion"
 
@@ -108,7 +103,7 @@ dependencies {
     implementation "androidx.datastore:datastore-core:$dataStoreVersion"
 }
 
-tasks.withType(KotlinCompile).all {
+tasks.withType(KotlinCompile).configureEach {
     kotlinOptions {
         freeCompilerArgs += [
             "-opt-in=com.yandex.yatagan.ConditionsApi"
