--- a/build.gradle
+++ b/build.gradle
@@ -35,8 +35,9 @@ buildscript {
 }
 
 plugins {
-    id 'com.android.application' version '8.0.1' apply false
-    id 'com.android.library' version '8.0.1' apply false
+    id 'com.android.application' version "8.2.2" apply false
+    id 'com.android.library' version "8.2.2" apply false
     id 'org.jetbrains.kotlin.android' version "$kotlinVersion" apply false
+    id 'com.google.devtools.ksp' version "1.9.22-1.0.17" apply false
 }
 
