--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,9 @@ buildscript {
         kotlinVersion = "1.9.22"
         ktxVersion = "1.12.0"
         appCompatVersion = "1.6.1"
-        materialVersion = "1.11.0"
+        // Do not update
+        // https://github.com/material-components/material-components-android/issues/3927
+        materialVersion = "1.10.0"
         constraintLayoutVersion = "2.1.4"
         junitVersion = "4.13.2"
         testExtJunitVersion = "1.1.5"
