--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,11 +31,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = JavaVersion.VERSION_11.toString()
     }
     buildFeatures {
         viewBinding true
@@ -102,6 +102,13 @@ dependencies {
 
     // DataStore
     implementation "androidx.datastore:datastore-core:$dataStoreVersion"
+
+    // Tinkoff TEA implementation
+    implementation("ru.tinkoff.kotea:core:$koteaVersion")
+    implementation("ru.tinkoff.kotea:android:$koteaVersion")
+
+    // TiRecycler
+    implementation "ru.tinkoff.mobile:ti-recycler-coroutines:$tiRecycler"
 }
 
 tasks.withType(KotlinCompile).configureEach {
